--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,12 @@
           href="/apple-touch-icon.png"/>
     <link rel="stylesheet"
           type="text/css"
-          href="css/styles.css"/>
+          href="/css/styles.css"/>
 </head>
 <body>
 
-    <button type="button" id="clicker">Click Me</button>
     <div id="main"></div>
     <script type="text/javascript"
-            src="js/app.js"></script>
+            src="/js/app.js"></script>
 </body>
 </html>
